# cto-scripts

./: .gitignore  pyproject.toml  requirements.txt
src/notion_ai_usage/: .env.example  __init__.py  __main__.py  databricks_job.py  databricks_secrets.py  env.py  main.ipynb  notion_ai_usage_job.py  requirements-databricks.txt  top_entities.py
